# raspi-scd40-logger

./: .gitignore  CMakeLists.txt  README.md  example.toml  test_config_simple.cpp  test_integration_manual.bat  test_integration_manual.sh
.github/workflows/: cmake-single-platform.yml
.kiro/specs/http-data-api/: design.md  requirements.md  tasks.md
.kiro/specs/missing-http-methods/: design.md  requirements.md  tasks.md
.kiro/specs/sensor-data-daemon/: design.md  requirements.md  tasks.md
config/: sensor-daemon-default.toml  sensor-daemon.toml  test-config.toml
docs/: HTTP_API_SPECIFICATION.md  MONITORING_AND_TROUBLESHOOTING.md
include/: config_manager.hpp  daemon_core.hpp  data_aggregator.hpp  diagnostic_tools.hpp  health_monitor.hpp  http_error_handler.hpp  http_security.hpp  http_utils.hpp  json_response_builder.hpp  logging_system.hpp  performance_cache.hpp  scd40_interface.hpp  sensor_data.hpp  time_series_storage.hpp
packaging/: README.md  build-package.bat  build-package.sh  test-package.sh
packaging/debian/: changelog  control  copyright  python3-sensor-daemon.install  rules  sensor-daemon.8  sensor-daemon.install  sensor-daemon.logrotate  sensor-daemon.maintscript  sensor-daemon.postinst  sensor-daemon.postrm  sensor-daemon.preinst  sensor-daemon.prerm
packaging/systemd/: sensor-daemon.service
proto/: .gitkeep  sensor_data.proto
python/: README.md  generate_proto.py  requirements.txt  setup.py
python/examples/: basic_usage.py  data_analysis.py
python/sensor_daemon/: __init__.py  check_rocksdb.py  cli.py  reader.py  reader_simple.py  sensor_data_pb2.py
python/tests/: __init__.py  test_cli.py  test_implementation.py  test_reader.py
src/: config_manager.cpp  daemon_core.cpp  data_aggregator.cpp  diagnostic_main.cpp  diagnostic_tools.cpp  health_monitor.cpp  http_error_handler.cpp  http_security.cpp  http_utils.cpp  json_response_builder.cpp  logging_system.cpp  main.cpp  performance_cache.cpp  scd40_interface.cpp  sensor_data.cpp  time_series_storage.cpp
tests/: .gitkeep  CMakeLists.txt  README.md  run_comprehensive_tests.bat  run_comprehensive_tests.sh  test_config_manager.cpp  test_daemon_core.cpp  test_data_aggregates_endpoint.cpp  test_data_aggregator.cpp  test_data_info_endpoint.cpp  test_data_integrity.cpp  test_data_range_endpoint.cpp  test_data_recent_endpoint.cpp  test_diagnostic_tools.cpp  test_health_monitor.cpp  test_health_monitor_server_extended.cpp  test_http_error_handler.cpp  test_http_utils.cpp  test_integration.cpp  test_json_response_builder.cpp  test_logging_system.cpp  test_main_integration.cpp  test_performance.cpp  test_performance_optimizations.cpp  test_scd40_interface.cpp  test_sensor_data.cpp  test_server_routing.cpp  test_stress.cpp  test_time_series_queries.cpp  test_time_series_storage.cpp
