# Test configuration - to be implemented in subsequent tasks

if(GTest_FOUND)
    # Test sources will be added in subsequent tasks
    set(TEST_SOURCES
        # test_main.cpp
        # test_daemon_core.cpp
        # test_sensor_interface.cpp
        # test_storage.cpp
    )
    
    # Uncomment when test sources are available
    # add_executable(sensor_daemon_tests ${TEST_SOURCES})
    # target_link_libraries(sensor_daemon_tests
    #     sensor_proto
    #     ${ROCKSDB_LIBRARY}
    #     ${SPDLOG_LIBRARY}
    #     ${Protobuf_LIBRARIES}
    #     GTest::gtest
    #     GTest::gtest_main
    #     Threads::Threads
    # )
    
    # add_test(NAME sensor_daemon_tests COMMAND sensor_daemon_tests)
endif()